--- a/john_arhin/IMBD_notebook_john_arhin_etl.ipynb
+++ b/john_arhin/IMBD_notebook_john_arhin_etl.ipynb
@@ -35,6 +35,8 @@
     }
    },
    "source": [
+    "## Remarks\n",
+    "\n",
     "We use the notebook in the project folder i.e. file IMDB_notebook.ipynb as the basis for this notebook.\n",
     "\n",
     "I want to thank [Stephen Nwoye](https://github.com/Stephen-Data-Engineer-Public) for the helpful starter code together with recommending the following helpful videos:\n",
@@ -59,6 +61,7 @@
     }
    },
    "source": [
+    "## Classes\n",
     "\n",
     "We define the `DataExtractor` class to have an `extract` method, such that this method returns data in the form of a dictionary.\n",
     "\n",
@@ -204,8 +207,9 @@
     "\n",
     "        print(\"ETL complete!\")\n",
     "\n",
-    "\n",
+    "# we use this line in order to make the commands run in a certain way\n",
     "if __name__ == \"__main__\":\n",
+    "\n",
     "    TABLES = {\n",
     "    \"https://raw.githubusercontent.com/mansik95/IMDB-Analysis/master/Data/MovieLens_movies.csv\": \"movies_Id\",\n",
     "    \"https://raw.githubusercontent.com/mansik95/IMDB-Analysis/master/Data/IMDb%20BoxOfficeMojo%20-%20Brands%20(US%20%26%20Canada).tsv\": \"brands_US_and_Canada\",\n",
@@ -255,23 +259,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cedce9d0-98c8-4782-ade0-3cce32c45649",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Databricks run of this notebook can be found [here](https://dbc-54b899f0-8dbe.cloud.databricks.com/jobs/3957824083901/runs/950822748280727?o=2413881793511514)."
+   ]
   }
  ],
  "metadata": {
